Verificando Conexão / Salvando novo carro

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,6 +71,7 @@ Versao %s<br><br>
     <!-- V -->
     <string name="vazio"/>
     <string name="video">Vídeo</string>
+    <string name="action_excluir">Excluir</string>
 
 
 </resources>
